Adding next level for model

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ nltk~=3.7
 spacy~=3.5.4
 contractions~=0.1.73
 langdetect~=1.0.7
+seaborn~=0.13.2
+matplotlib~=3.5.2
+catboost~=1.2.3
+imblearn~=0.0
+shap~=0.46.0
