--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-numpy~=1.21.6
+numpy~=1.23.5
 pandas~=1.4.2
 scikit-learn~=1.5.0
-nltk~=3.7
+nltk~=3.9
 spacy~=3.5.3
 contractions~=0.1.73
 langdetect~=1.0.7
 seaborn~=0.13.2
 matplotlib~=3.5.2
 catboost~=1.2.3
-imblearn~=0.12.4
+imbalanced-learn~=0.12.4
 shap~=0.46.0
 clearml~=1.18.0
