--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy~=1.21.6
-pandas~=1.4.2
+numpy~=1.24.4
+pandas~=2.2.3
 scikit-learn~=1.5.0
 nltk~=3.7
 spacy~=3.5.3
@@ -8,6 +8,7 @@ langdetect~=1.0.7
 seaborn~=0.13.2
 matplotlib~=3.5.2
 catboost~=1.2.3
-imblearn~=0.12.4
+imblearn~=0.0
 shap~=0.46.0
 clearml~=1.18.0
+emoji~=2.14.1
